samples/_failures_safe/1761712940_b4c08c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00fbcb45.c: In function ‘main’:
./samples/SAFE/__tmp_00fbcb45.c:152:17: error: expected expression at end of input
  152 |                 } else if (status == -1)
      |                 ^
./samples/SAFE/__tmp_00fbcb45.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00fbcb45.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00fbcb45.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00fbcb45.c:152:17: error: expected declaration or statement at end of input
